<resources>
    <string name="app_name">Quantica</string>
    <string name="title_activity_log_in">log in</string>
    <string name="logo_description">logo app</string>
    <string name="prefs_file">com.example.Quantica.PREFERENCE_FILE_KEY</string>

    <!-- Español -->
    <string name="iniciar_sesion">Inicia Sesion</string>
    <string name="registrarse">Registrate</string>
    <string name="titulo_inicio_de_sesion">Bienvenido</string>
    <string name="subtitulo_inicio_de_sesion">Inicia sesion</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetir_contraseña">Confirma tu contraseña</string>
    <string name="olvidaste_constraseña_part1">¿Olvidaste tu contraseña?</string>
    <string name="olvidaste_constraseña_part2"><u>Recuperala aqui</u></string>
    <string name="redirigir_registro_part1">¿No tienes cuenta?</string>
    <string name="redirigir_registro_part2"><u>Registrate aqui</u></string>
    <string name="redirigir_iniciar_sesion_part1">¿Ya tienes cuenta?</string>
    <string name="redirigir_iniciar_sesion_part2"><u>Inicia sesion aqui</u></string>
    <string name="o">O</string>
    <string name="titulo_registro">¿Eres nuevo?</string>
    <string name="subtitulo_registro">Crea tu cuenta</string>

    <!-- English -->
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="login_tittle">Welcome</string>
    <string name="login_subtitle">Login</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password_part1">Forgot password?</string>
    <string name="forgot_password_part2"><u>Click here</u></string>
    <string name="redirect_register_part1">Dont have an account?</string>
    <string name="redirect_register_part2"><u>Sing up here!</u></string>
    <string name="redirect_login_part1">Already have an account?</string>
    <string name="redirect_login_part2"><u>Log in here</u></string>
    <string name="or">Or</string>
    <string name="sign_up_title">Are you new?</string>
    <string name="sign_up_subtitle">Create your account!</string>

    <!-- log in descriptions -->
    <string name="login_return_Btn">Login return button</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="twitter_icon">Twitter icon</string>
    <string name="google_icon">Google icon</string>
    <string name="click_here"><u>Click Here!</u></string>

    <string name="title_Main">Quantica</string>
    <string name="title_home">Home</string>
    <string name="title_seach">Search</string>
    <string name="title_register">Register</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">home</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_Dashboard">Dashboard</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->


</resources>