<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_gradient"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ReturnLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_32"
                app:tint="#ffffff" />

            <TextView
                android:id="@+id/LoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingVertical="10dp"
                android:paddingRight="10dp"
                android:textColor="#ffffff"
                android:textSize="56sp"
                android:text="@string/login_tittle"
                 />

            <TextView
                android:id="@+id/LoginSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:paddingRight="10dp"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:text="@string/login_subtitle"
                />

            <EditText
                android:id="@+id/editTextEmailAddressLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:drawableStart="@drawable/ic_baseline_email_32"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/lightest"
                android:hint="@string/email"
                />

            <EditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/ic_baseline_lock_32"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/lightest"
                android:hint="@string/password"
                />

            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/log_in_button_design"
                android:elevation="3dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingVertical="16dp"
                android:paddingHorizontal="40dp"
                android:text="@string/log_in"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVforgetTextPart1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingRight="4dp"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    />

                <TextView
                    android:id="@+id/tVforgetTextPart2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingRight="4dp"
                    android:textColor="@color/yellow"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/blackLineLeft"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tVor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/or"
                    />

                <View
                    android:id="@+id/blackLineRight"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/facebookLoginBtn"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:src="@drawable/facebook_login_icon" />

                <ImageView
                    android:id="@+id/googleLoginBtn"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:src="@drawable/gmail_login_icon" />

                <ImageView
                    android:id="@+id/twitterLoginBtn"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:src="@drawable/twitter_login_icon" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVSendToRegisterTextPart1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:paddingRight="8dp"
                    android:gravity="right"
                    android:text="@string/redirect_register_part1"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    />

                <TextView
                    android:id="@+id/tVSendToRegisterTextPart2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/redirect_register_part2"
                    android:textColor="@color/yellow"
                    android:textSize="18sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>